...
            .onAppear {
                viewModel.text = value
            }
            .onChange(of: viewModel.text) { _, newValue in
                value = newValue
            }
            .accessibilityIdentifier("searchField")
    }
}

class DebouncingTextFieldModel: ObservableObject {
    @Published var text: String = "" {
        didSet {
...
